force-app/main/default/objects/Case/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Account.Account_Manager__r.FirstName  + &quot; &quot;+  Account.Account_Manager__r.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>