force-app/main/default/objects/Case/fields/Action_determination__c.field-meta.xml
<CustomField>
    <fullName>Action_determination__c</fullName>
    <label>Action determination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Need more information</fullName>
            </value>
            <value>
                <fullName>Limited approval (ok to pilot)</fullName>
            </value>
            <value>
                <fullName>Rejectd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>