force-app/main/default/objects/Case/fields/Any_more_information_for_this_request__c.field-meta.xml
<CustomField>
    <fullName>Any_more_information_for_this_request__c</fullName>
    <label>Any more information for this request?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>