force-app/main/default/objects/Case/fields/Associated_Impacts__c.field-meta.xml
<CustomField>
    <fullName>Associated_Impacts__c</fullName>
    <label>Associated Impacts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Courses</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>