force-app/main/default/objects/Case/fields/At_risk__c.field-meta.xml
<CustomField>
    <fullName>At_risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At risk</label>
    <type>Checkbox</type>
</CustomField>