force-app/main/default/objects/Case/fields/BAU_Owner_s__c.field-meta.xml
<CustomField>
    <fullName>BAU_Owner_s__c</fullName>
    <label>BAU Owner(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>