force-app/main/default/objects/Case/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <inlineHelpText>Also considered in this is the workload</inlineHelpText>
    <label>Business Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wish List</fullName>
            </value>
            <value>
                <fullName>Daily Impact</fullName>
            </value>
            <value>
                <fullName>Process Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>