force-app/main/default/objects/Case/fields/Case_assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Case_assigned_to__c</fullName>
    <label>Case assigned to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jorge</fullName>
                <default>true</default>
                <label>Jorge</label>
            </value>
            <value>
                <fullName>Robert</fullName>
            </value>
            <value>
                <fullName>Tim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>