force-app/main/default/objects/Case/fields/Case_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Formula__c</fullName>
    <formula>Owner:User.FirstName &amp; &apos; &apos; &amp;   Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Formula</label>
    <type>Text</type>
</CustomField>