force-app/main/default/objects/Case/fields/Change_Impact_Ripples__c.field-meta.xml
<CustomField>
    <fullName>Change_Impact_Ripples__c</fullName>
    <label>Change Impact/Ripples</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>