force-app/main/default/objects/Case/fields/Change_Request_Assessment_of_Costs_Risks__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Assessment_of_Costs_Risks__c</fullName>
    <label>Change Request Assessment of Costs/Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>