force-app/main/default/objects/Case/fields/Change_to_IT_infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Change_to_IT_infrastructure__c</fullName>
    <inlineHelpText>Will this project involve a change to the IT infrastructure? This could be a change to existing technology. If so, please explain.
Implication: A change to the established infrastructure could mean a change in the information security architecture
and implementations. Changes to processes, procedures and mitigating controls might be required because of the
infrastructure change.</inlineHelpText>
    <label>Change to IT infrastructure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>