force-app/main/default/objects/Case/fields/Change_to_Product_or_Solution__c.field-meta.xml
<CustomField>
    <fullName>Change_to_Product_or_Solution__c</fullName>
    <label>Change to Product or Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Models/methods</fullName>
            </value>
            <value>
                <fullName>Research/Publications</fullName>
            </value>
            <value>
                <fullName>Training/Learning</fullName>
            </value>
            <value>
                <fullName>Tools/Toolkits</fullName>
            </value>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>