force-app/main/default/objects/Case/fields/Comment_Age__c.field-meta.xml
<CustomField>
    <fullName>Comment_Age__c</fullName>
    <description>Age of comment</description>
    <label>Comment Age</label>
    <type>Time</type>
</CustomField>