force-app/main/default/objects/Case/fields/Communicated_to_the_affected_departments__c.field-meta.xml
<CustomField>
    <fullName>Communicated_to_the_affected_departments__c</fullName>
    <inlineHelpText>Please attach evidence that you have communicated this project/change to the affected departments.
Evidence could be in the form of an email, meeting minutes, etc.</inlineHelpText>
    <label>Communicated to the affected departments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>