force-app/main/default/objects/Case/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communication</label>
    <type>Checkbox</type>
</CustomField>