force-app/main/default/objects/Case/fields/Contractor_Does_not_need_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Does_not_need_Hardware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor Does not need Hardware</label>
    <type>Checkbox</type>
</CustomField>