force-app/main/default/objects/Case/fields/Contractor_transitioning_to_FT_Employee__c.field-meta.xml
<CustomField>
    <fullName>Contractor_transitioning_to_FT_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the person transitioning from a contractor to a FT Employee?</inlineHelpText>
    <label>Contractor transitioning to FT Employee</label>
    <type>Checkbox</type>
</CustomField>