force-app/main/default/objects/Case/fields/Course_Slides_Presentation_decks__c.field-meta.xml
<CustomField>
    <fullName>Course_Slides_Presentation_decks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Slides/Presentation decks</label>
    <type>Checkbox</type>
</CustomField>