force-app/main/default/objects/Case/fields/Current_or_New_Systems__c.field-meta.xml
<CustomField>
    <fullName>Current_or_New_Systems__c</fullName>
    <label>Current or New Systems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>