force-app/main/default/objects/Case/fields/Days_Opened__c.field-meta.xml
<CustomField>
    <fullName>Days_Opened__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Opened</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>