force-app/main/default/objects/Case/fields/Decision_level__c.field-meta.xml
<CustomField>
    <fullName>Decision_level__c</fullName>
    <label>Decision level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1:  Operational</fullName>
            </value>
            <value>
                <fullName>L2:  Short-term tactical</fullName>
            </value>
            <value>
                <fullName>L3:  Tactical</fullName>
            </value>
            <value>
                <fullName>L4:  Short-term strategic</fullName>
            </value>
            <value>
                <fullName>L5:  Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>