force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>New Hire Department</description>
    <label>Department</label>
    <length>30</length>
    <type>Text</type>
</CustomField>