force-app/main/default/objects/Case/fields/Departments_and_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Departments_and_Team_Members__c</fullName>
    <description>Departments and Team Members associated with this project/change</description>
    <inlineHelpText>Please list the departments and team members associated with this project/change.</inlineHelpText>
    <label>Departments and Team Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>