force-app/main/default/objects/Case/fields/Describe_the_services_of_New_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_services_of_New_Vendor__c</fullName>
    <inlineHelpText>Implication: The use of vendors can introduce new information security risk into the enterprise and into the overall
business process. That risk must be identified early in the project to provide time to assess the vendor’s information
security processes and mitigating controls, introduce contractual requirements such as acceptance of liability in the
event of a security breach introduced through either party, research and implement additional mitigating controls
on all sides, or delay the project.</inlineHelpText>
    <label>Describe the services of New Vendor</label>
    <length>37000</length>
    <type>LongTextArea</type>
</CustomField>