force-app/main/default/objects/Case/fields/Detailed_description_of_change_request__c.field-meta.xml
<CustomField>
    <fullName>Detailed_description_of_change_request__c</fullName>
    <label>Detailed description of change request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>