force-app/main/default/objects/Case/fields/Digital_Products__c.field-meta.xml
<CustomField>
    <fullName>Digital_Products__c</fullName>
    <label>Digital Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Access</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Partial Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>