force-app/main/default/objects/Case/fields/Disposition_Decision__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Decision__c</fullName>
    <label>Disposition Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defer</fullName>
            </value>
            <value>
                <fullName>Planned Enhancement</fullName>
            </value>
            <value>
                <fullName>Investigate</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>