force-app/main/default/objects/Case/fields/Does_Vendor_have_DPA__c.field-meta.xml
<CustomField>
    <fullName>Does_Vendor_have_DPA__c</fullName>
    <label>Does Vendor have DPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>