force-app/main/default/objects/Case/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <label>Due date</label>
    <type>Date</type>
</CustomField>