force-app/main/default/objects/Case/fields/During_the_course__c.field-meta.xml
<CustomField>
    <fullName>During_the_course__c</fullName>
    <label>During the course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course Flow/ order of modules</fullName>
            </value>
            <value>
                <fullName>Module timing</fullName>
            </value>
            <value>
                <fullName>Use of slides versus workbook</fullName>
            </value>
            <value>
                <fullName>Participant presentations</fullName>
            </value>
            <value>
                <fullName>Exam administration and/or timing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>