force-app/main/default/objects/Case/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This is the effective date for a new employee, leaving employee, or transitioning employee</description>
    <inlineHelpText>This is the effective date for a new employee, leaving employee, or transitioning employee</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>