force-app/main/default/objects/Case/fields/Engagement_facilitation_tactics__c.field-meta.xml
<CustomField>
    <fullName>Engagement_facilitation_tactics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engagement/facilitation tactics</label>
    <type>Checkbox</type>
</CustomField>