force-app/main/default/objects/Case/fields/Exception_or_product_solution_request__c.field-meta.xml
<CustomField>
    <fullName>Exception_or_product_solution_request__c</fullName>
    <label>Exception or product/solution request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time exception</fullName>
            </value>
            <value>
                <fullName>Regional exception</fullName>
            </value>
            <value>
                <fullName>Partner exception</fullName>
            </value>
            <value>
                <fullName>Make part of the design/delivery of standard offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>