force-app/main/default/objects/Case/fields/Executive_Approval__c.field-meta.xml
<CustomField>
    <fullName>Executive_Approval__c</fullName>
    <inlineHelpText>Has your project/change received executive approval</inlineHelpText>
    <label>Executive Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>