force-app/main/default/objects/Case/fields/Existing_Field__c.field-meta.xml
<CustomField>
    <fullName>Existing_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Field</label>
    <type>Checkbox</type>
</CustomField>