force-app/main/default/objects/Case/fields/Existing_Process__c.field-meta.xml
<CustomField>
    <fullName>Existing_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Process</label>
    <type>Checkbox</type>
</CustomField>