force-app/main/default/objects/Case/fields/Expected_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Expected_Benefits__c</fullName>
    <inlineHelpText>What is the business case?  What are you trying to accomplish with this request?</inlineHelpText>
    <label>Expected Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>