force-app/main/default/objects/Case/fields/Have_you_clicked_on_any_links__c.field-meta.xml
<CustomField>
    <fullName>Have_you_clicked_on_any_links__c</fullName>
    <label>Have you clicked on any links?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>