force-app/main/default/objects/Case/fields/Home_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Shipping_Address__c</fullName>
    <description>This is for the shipping address for new employees</description>
    <inlineHelpText>Please  put in the address where we should ship new equipment, etc.</inlineHelpText>
    <label>Welcome Box/Hardware Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>