force-app/main/default/objects/Case/fields/Home_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Home_Shipping_City__c</fullName>
    <label>Welcome Box/Hardware Shipping City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>