force-app/main/default/objects/Case/fields/Home_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Shipping_Country__c</fullName>
    <label>Welcome Box/Hardware Shipping Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>