force-app/main/default/objects/Case/fields/Home_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Shipping_Postal_Code__c</fullName>
    <label>Welcome Box/Hardware Ship Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>