force-app/main/default/objects/Case/fields/Home_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Home_Shipping_State__c</fullName>
    <label>Welcome Box/Hardware Shipping State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>