force-app/main/default/objects/Case/fields/Home_Shipping_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Home_Shipping_Street_2__c</fullName>
    <label>Welcome Box/Hardware Shipping Street 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>