force-app/main/default/objects/Case/fields/Hours_Before_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Before_Reviewed__c</fullName>
    <description>This is the time before the ticket STATUS was changed from NEW to another value.  Calculated as Created TIME_WHEN_REVIEWED - CREATEDDATE</description>
    <formula>(Time_When_Reviewed__c - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the time before the ticket STATUS was changed from NEW to another value.</inlineHelpText>
    <label>Hours Before Reviewed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>