force-app/main/default/objects/Case/fields/How_was_incident_discovered__c.field-meta.xml
<CustomField>
    <fullName>How_was_incident_discovered__c</fullName>
    <label>How was incident discovered?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>