force-app/main/default/objects/Case/fields/ICT_Asset__c.field-meta.xml
<CustomField>
    <fullName>ICT_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICT Asset</label>
    <referenceTo>Asset_upload_to_SF__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>