force-app/main/default/objects/Case/fields/If_Checked_which_state__c.field-meta.xml
<CustomField>
    <fullName>If_Checked_which_state__c</fullName>
    <inlineHelpText>What state do payroll taxes need to be set up for?</inlineHelpText>
    <label>If Checked, which state</label>
    <length>25</length>
    <type>Text</type>
</CustomField>