force-app/main/default/objects/Case/fields/If_Error_select_type_off_error__c.field-meta.xml
<CustomField>
    <fullName>If_Error_select_type_off_error__c</fullName>
    <label>If Error, select type off error</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grammatical</fullName>
            </value>
            <value>
                <fullName>Data/Research</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Brand Standard</fullName>
            </value>
            <value>
                <fullName>Terminology</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Translation</fullName>
            </value>
            <value>
                <fullName>Other, add to detailed description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>