force-app/main/default/objects/Case/fields/Impact_of_the_change__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_the_change__c</fullName>
    <inlineHelpText>Who internal/external will be impacted by the change (if known)?</inlineHelpText>
    <label>Impact of the change:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>