force-app/main/default/objects/Case/fields/Impact_on_current_business_continuity__c.field-meta.xml
<CustomField>
    <fullName>Impact_on_current_business_continuity__c</fullName>
    <inlineHelpText>Will this project have an impact on current business continuity, disaster recovery processes and
infrastructure?
Implication: Changes in business and IT processes and infrastructure often make established business continuity and
disaster recovery plans out of date. Not applying changes to the enterprise’s recovery plans and infrastructure puts
the enterprise at risk in the event of an interruption in the normal business process.</inlineHelpText>
    <label>Impact on current business continuity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>