force-app/main/default/objects/Case/fields/Impacted_Groups__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Groups__c</fullName>
    <label>Impacted Groups</label>
    <type>TextArea</type>
</CustomField>