force-app/main/default/objects/Case/fields/Implementation_Owner_s__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner_s__c</fullName>
    <label>Implementation Owner(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>