force-app/main/default/objects/Case/fields/Improper_Use_of_Systems_Data_Description__c.field-meta.xml
<CustomField>
    <fullName>Improper_Use_of_Systems_Data_Description__c</fullName>
    <label>Improper Use of Systems/Data Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>