force-app/main/default/objects/Case/fields/Improper_Use_of_Systems_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Improper_Use_of_Systems_Data_Type__c</fullName>
    <label>Improper Use of Systems/Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loss or Theft of Equipment</fullName>
            </value>
            <value>
                <fullName>Suspected Unauthorized Access</fullName>
            </value>
            <value>
                <fullName>Violation of InfoSec Policies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>