force-app/main/default/objects/Case/fields/In_Practice__c.field-meta.xml
<CustomField>
    <fullName>In_Practice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Practice</label>
    <type>Checkbox</type>
</CustomField>