force-app/main/default/objects/Case/fields/In_Program__c.field-meta.xml
<CustomField>
    <fullName>In_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Program</label>
    <type>Checkbox</type>
</CustomField>