force-app/main/default/objects/Case/fields/Incident_Category__c.field-meta.xml
<CustomField>
    <fullName>Incident_Category__c</fullName>
    <label>Incident Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Malware</fullName>
            </value>
            <value>
                <fullName>System Outage/Degradation</fullName>
            </value>
            <value>
                <fullName>Improper use of Prosci Systems/Data</fullName>
                <label>Improper Use of Prosci Systems/Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>