force-app/main/default/objects/Case/fields/Initial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Initial_Owner__c</fullName>
    <label>Initial Owner</label>
    <length>5</length>
    <type>Text</type>
</CustomField>