force-app/main/default/objects/Case/fields/Is_Manager_Position__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manager Position</label>
    <type>Checkbox</type>
</CustomField>