force-app/main/default/objects/Case/fields/Is_this_a_Manager_or_Title_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Manager_or_Title_Change__c</fullName>
    <inlineHelpText>If the manager is changing but not the department, please select manager. If this is just a title change but not a change to department or manager, please select title. For all other transitions, select Transition.</inlineHelpText>
    <label>Is this just a Manager or Title Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager Change</fullName>
            </value>
            <value>
                <fullName>Title Change</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>