force-app/main/default/objects/Case/fields/Is_this_an_outage_or_performance_issue__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_outage_or_performance_issue__c</fullName>
    <label>Is this an outage or a performance issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System_Outage</fullName>
                <label>System Outage</label>
            </value>
            <value>
                <fullName>Performance Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>