force-app/main/default/objects/Case/fields/IT_Infrastructure_explanation__c.field-meta.xml
<CustomField>
    <fullName>IT_Infrastructure_explanation__c</fullName>
    <inlineHelpText>Will this project involve a change to the IT infrastructure? This could be an addition of new technology,
or a change to existing technology. If so, please explain.
Implication: A change to the established infrastructure could mean a change in the information security architecture
and implementations. Changes to processes, procedures and mitigating controls might be required because of the
infrastructure change.</inlineHelpText>
    <label>IT Infrastructure explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>