force-app/main/default/objects/Case/fields/Knowledge_checks_tests__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_checks_tests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge checks, tests</label>
    <type>Checkbox</type>
</CustomField>